infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: glassdoor.dev
      http:
        paths:
          - path: /api/v1
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
